--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,22 @@ body {
   box-sizing: border-box;
   background: #000;
 }
+
+/* In your CSS file */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #1e3a8a; /* blue-900 */
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #173e81;
+}
